--- a/instruments/static/style.css
+++ b/instruments/static/style.css
@@ -1,5 +1,6 @@
-/* Cornwallis ICT CSS */
+/* Instruments CSS */
 
+/* Font Awesome */
 @import 'font-awesome.css';
 
 @font-face {
@@ -23,7 +24,6 @@
 {
     margin:0px;
     padding:0px;
-    
 }
 
 body
@@ -132,8 +132,14 @@ header h1 span
     color:#149fee;
 }
 
-/* Nav */
+header>span
+{
+    float:right;
+    margin:4px 6px;
+    color:#555;
+}
 
+/* Nav */
 nav
 {
     float:left;
@@ -214,7 +220,6 @@ section#content
     float:left;
     
     min-height:600px;
-    /*width:500px;*/
     width:55%;
     
     border:1px solid #d7d7d7;
@@ -224,7 +229,7 @@ section#content
     
     margin-right:28px;
     
-    padding:28px;
+    padding:20px 0px 0px 28px;
 }
 
 section>*
@@ -249,10 +254,80 @@ section#sidebar section
     
     margin-top:28px;
     
-    width:80%;
-    
     padding:14px;
 }
 
+.flashmessage
+{
+    text-align:center;
+    border-bottom:1px solid #d7d7d7;
+    margin-bottom:0px;
+}
 
-/* Font Awesome */
+.flashmessage.info
+{
+    background-color:#5FBFFA;
+    color:white;
+}
+
+.flashmessage.error
+{
+    background-color:#EC5D59;
+    color:white;
+}
+
+
+/* FORMS */
+
+label
+{
+	display:inline-block;
+	min-width:110px;
+	/*text-align:right;*/
+}
+
+dl label
+{
+    min-width:auto;
+    text-align:left;
+}
+
+form dl dd, form p, form li
+{
+    padding:6px 0;
+}
+
+input, select, textarea
+{
+	padding:5px 6px;
+	margin-left:8px;
+	background:white;
+	border:1px solid #d2d2d2;
+}
+
+label.button 
+{
+	min-width:0px;
+	border:1px solid #fff;
+	border-color:#8466AF #391D5F #381D5E #8466AF;
+}
+label.button input:hover {cursor:pointer;}
+
+label.button input
+{
+	margin:0px;
+	width:auto;
+	background:#572D92;
+	background-image: linear-gradient(bottom, rgb(78, 40, 131) 1%, rgb(104, 66, 157) 51%);
+	background-image: -webkit-linear-gradient(bottom, rgb(78, 40, 131) 1%, rgb(104, 66, 157) 51%);
+	background-image: -moz-linear-gradient(bottom, rgb(78, 40, 131) 1%, rgb(104, 66, 157) 51%);
+	background-image: -ms-linear-gradient(bottom, rgb(78, 40, 131) 1%, rgb(104, 66, 157) 51%);
+	color:white;
+	border:none;
+	border-top:1px solid #AB96C9;
+}
+
+label.button input:disabled
+{
+    color:#bbb;
+}
