--- a/instruments/templates/layout.html
+++ b/instruments/templates/layout.html
@@ -5,35 +5,51 @@
 <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
 <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='style.css')}}">
+{% block html_head %}{% endblock %}
 
-<title>Instruments</title>
+<title>{% block html_title %}Home{% endblock %} &raquo; Instruments</title>
 
 </head>
 
 <body>
 
 <header>
-    <h1>Instruments <span>Dashboard</span></h1>
+    <span>{% block current_user %}Not logged in{% endblock %}</span>
+    <h1>Instruments <span>{% block title %}Dashboard{% endblock %}</span></h1>
+    
 </header>
 
 <nav>
     <ul>
-        <li class="selected"><a href="/"><span></span><i class="icon-home"></i>Home</a></li>
+        <li {% if request.endpoint == 'home' %}class="selected"{% endif %}><a href="{{url_for('home')}}"><span></span><i class="icon-home"></i>Home</a></li>
+        {% block main_navigation %}
+        {% for endpoint, label, icon in blueprints %}
+            <li {% if endpoint == request.endpoint %}class="selected"{% endif %}><a href="{{url_for(endpoint)}}"><span></span><i class="icon-{{icon}}"></i>{{label}}</a></li>
+        {% endfor %}
+        <li {% if request.endpoint == 'admin' %}class="selected"{% endif %}><a href="{{url_for('admin')}}"><span></span><i class="icon-cogs"></i>Admin</a></li>
+        {% endblock %}
     </ul>
 </nav>
 
 <section id="content">
-<h1>Instruments Dashboard</h1>
-<p>Welcome to the Instruments Dashboard</p>
 
+{% block content %}
+<h1>Dashboard</h1>
+<p>Welcome to the Instruments Dashboard</p>
+{% endblock %}
 
 </section>
 
 <section id="sidebar">
+    {% for message in get_flashed_messages(True) %}
+    <div class="flashmessage {{message[0]}}">{{ message[1] }}</div>
+    {% endfor %}
+    {% block sidebar %}
     <section>
         <h2>Sidebar Item</h2>
         <p>sidebar item content</p>
     </section>
+    {% endblock %}
 </section>
 
 </body>
