--- a/instruments/templates/layout.html
+++ b/instruments/templates/layout.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="icon" href="/favicon.ico" type="image/x-icon">
+<!--<link rel="icon" href="/favicon.ico" type="image/x-icon">-->
 
 <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='style.css')}}">
 {% block html_head %}{% endblock %}
