--- a/instruments/static/style.css
+++ b/instruments/static/style.css
@@ -148,7 +148,7 @@ header>span a
 nav#main
 {
     float:left;
-    width:90px;
+    width:8%;
     border-top:1px solid #efefef;
     
     text-align:center;
@@ -167,8 +167,6 @@ nav#main a
     height:72px;
     font-size:9pt;
     padding-top:18px;
-    
-    width:90px;
 }
 
 nav#main li.selected a
@@ -236,9 +234,9 @@ section#content
     border-bottom-right-radius:8px;
     border-bottom-left-radius:8px;
     
-    margin-right:12px;
+    margin-right:1%;
     
-    padding:20px 6px 0px 22px;
+    padding:20px 0.5% 0px 1.5%;
 }
 
 section>*
@@ -251,7 +249,7 @@ section>*
 section#sidebar
 {
     float:left;
-    width:25%;
+    width:28%;
 }
 
 section#sidebar section
