--- a/instruments/static/style.css
+++ b/instruments/static/style.css
@@ -268,7 +268,8 @@ section#sidebar section
 {
     text-align:center;
     border-bottom:1px solid #d7d7d7;
-    margin-bottom:0px;
+    margin:0px 48px 20px 36px;
+    
 }
 
 .flashmessage.info
